added css for the home page input

--- a/src/components/table.css
+++ b/src/components/table.css
@@ -5,11 +5,11 @@ table {
   }
   
   td, th {
-    border: 1px solid #dddddd;
+    border: 1px solid #6f4393;
     text-align: left;
     padding: 8px;
   }
   
   tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: #6f4393;
   }
