--- a/src/components/table.css
+++ b/src/components/table.css
@@ -13,3 +13,16 @@ table {
   tr:nth-child(even) {
     background-color: #6f4393;
   }
+
+  .expense_text_wrapper{
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  button {
+    background: #353239;
+    border:none;
+    padding: 5px 10px;
+    color:white;
+    border: 1px solid #423e47;
+  }
