--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: #2B292E;
     color:white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
