--- a/src/pages/HomePage/Home.css
+++ b/src/pages/HomePage/Home.css
@@ -21,3 +21,9 @@
 .container_form_home_button {
     margin: 30px 0px;
 }
+
+.date-card{
+    position: absolute;
+    width: 50%;
+    padding: 50px;
+}
