--- a/src/pages/LoginPage/Login.css
+++ b/src/pages/LoginPage/Login.css
@@ -1,6 +1,6 @@
 .container_form {
-  max-height: 80vh;
-  padding: 50px;
+  height: 100vh;
+  /* padding: 50px; */
 }
 
 .sub_conatiner_login{
@@ -9,6 +9,7 @@
   margin: auto;
   display: flex;
   flex-direction: row;
+  object-fit:fill;
   /* overflow: hidden; */
 
 }
@@ -21,6 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  object-fit:contain;
 }
 
 .login_input_group > label {
