--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #eeeeee;
 }
 
 * {
@@ -19,4 +20,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.my-4{
+  margin: 30px 0px;
 }
