--- a/src/pages/LoginPage/Login.css
+++ b/src/pages/LoginPage/Login.css
@@ -1,3 +1,32 @@
 .container_form {
-  height: 90vh;
+  max-height: 80vh;
+  padding: 50px;
+}
+
+.sub_conatiner_login{
+  /* width: 80%; */
+  /* height: 60%; */
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  /* overflow: hidden; */
+
+}
+
+.image_login{
+  margin-left: -100px;
+}
+
+.login_input_group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login_input_group > label {
+  font-size: 34px;
+  text-align: center;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
